# tasktimer

./: .dockerignore  .gitignore  .golangci.yml  DEVELOPER.md  Dockerfile.build  Dockerfile.server  LICENSE.txt  Makefile  README.md  SERVER.md  go.mod  make-mac-app.sh
cmd/task-timer/: main.go
cmd/task-timer-daemon/: main.go
cmd/task-timer-sync/: main.go
internal/assets/: assets.go
pkg/: build-server-binary.sh  build-server-exe.sh  control  control-server  dmg.sh  docker-server-entrypoint.sh  package-deb.sh  package-exe.sh  package-rpm.sh  package-server-deb.sh  package-server-exe.sh  package-server-rpm.sh  task-timer-server.nsi  task-timer.desktop  task-timer.nsi
scripts/: mac-app.sh  mac-server-app.sh
server/: README.md  config.example.toml  go.mod  go.sum  pyproject.toml
server/cmd/task-timer-server/: main.go  service_other.go  service_windows.go  tray_darwin.go  tray_off.go
server/internal/api/: api_test.go  auth.go  helpers.go  server.go
server/internal/config/: config.go  paths_darwin.go  paths_linux.go  paths_windows.go
server/internal/crypto/: crypto.go
server/internal/jira/: client.go  client_test.go  oauth.go
server/internal/store/: store.go
server/task_timer_server/: __main__.py  main.py  security.py  service.py
server/task_timer_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/task_timer_server/jira/: __init__.py
server/task_timer_server/routers/: tasks.py  worklogs.py
server/tests/: conftest.py  test_auth_flow.py  test_jira_quirks.py  test_worklogs.py
var/: tasks.db
(+59 files in other folders)
